tests/snapshots/examples_fixtures/guide_type_system__Guide__Effects.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/Guide/Effects.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Guide.Effects` doesn't match file path `//?/examples/guide_type_system/Guide/Effects.flx`.

  examples/guide_type_system/Guide/Effects.flx:1:1
  |
1 | module Guide.Effects {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
